fix layout issue

--- a/src/app/components/reading-results/reading-results.component.scss
+++ b/src/app/components/reading-results/reading-results.component.scss
@@ -1,7 +1,8 @@
 :host {
   width: 100%;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 h1 {
   margin-bottom: 3rem;
